fix: truncate headline to one line closes #326

--- a/src/screens/Main/mentorcard.module.scss
+++ b/src/screens/Main/mentorcard.module.scss
@@ -48,8 +48,11 @@
   }
 }
 
-.role {
+.headline {
   margin-top: -0.25rem;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  overflow-x: hidden;
 }
 
 .biography {
